--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <section class="section-playlist">
                     <div class="section-playlist__content">
                         <span class="text title">Crie sua primeira playlist</span>
-                        <span class="text subtitle">É fácil, vaos te ajudar.</span>
+                        <span class="text subtitle">É fácil, vamos te ajudar.</span>
                         <button class="section-playlist__button">
-                            <span>Crisar playlist</span>
+                            <span>Criar playlist</span>
                         </button>
                     </div>
                 </section>
@@ -71,7 +71,10 @@
                     <a href="">Cookies</a>
                 </div>
                 <div class="languages">
-                    <button class="languages__button"></button>
+                    <button class="languages__button">
+                        <span class="fa fa-globe"></span>
+                        <span>Português do Brasil</span>
+                    </button>
                 </div>
             </div>       
     </div>
