--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
     <link rel="shortcut icon" href="./src/assets/icons/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="src/styles/reset.css" />
-    <link rel="stylesheet" href="src/styles/vars.css" />
+    <link rel="stylesheet" href="./src/styles/vars.css" />
     <link rel="stylesheet" href="src/styles/main-content.css" />
     <link rel="stylesheet" href="src/styles/sidebar-footer.css" />
     <link rel="stylesheet" href="src/styles/media-query.css" /> <!--Media queries devem ser chamados depois do CSS principal -->
@@ -30,7 +30,7 @@
         <nav class="sidebar__navigation">
             <div class="logo">
                 <a href="">
-                <img src="./icons/logo-spotify.png" alt="logo do spotify">
+                <img src="./src/assets/icons/logo-spotify.png" alt="logo do spotify">
             </a>
         </div>
                 <ul>
@@ -79,7 +79,35 @@
             </div>       
     </div>
 </div>
+<main>
+    <div class="main-container">
+        <nav class="header__navigation">
+            <div class="navigation">
+                <button class="arrow-left">
+                    <img src="./src/assets/icons/small-left.png" alt="Seta esquerda">
+                </button>
+            </div>
+            <button class="arrow-right">
+                <img src="./src/assets/icons/small-right.png" alt="Seta direita">
+            </button>
+            <div class="header__search">
+                <img src="./src/assets/icons/search.png" alt="">
+                <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?"/>
+            </div>
 
-    
+            <div class="header__login">
+                <button class="subscribe">Inscreva-se</button>
+                <button class="login">Entrar</button>
+
+                
+
+            </div>
+        </nav>
+    </div>
+</main>
+
+ <footer class="disclaimer-premium">
+
+ </footer>
  </body>
  </html>
